fixed footer alignement bug for repsosnsivness deisgn

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -10,7 +10,7 @@
     border: none;
     padding: 0.5rem;
     border-radius: 10px;
-    margin-right: 1.2rem;
+    margin-right: 1rem;
     transition: background 0.5s ease, color 0.5s ease;
 }
 
